Weitere fix für einrückung und whitespacing

--- a/client/src/Components/ParameterView/ParameterView.css
+++ b/client/src/Components/ParameterView/ParameterView.css
@@ -17,7 +17,6 @@
 }
 
 .parameter-list {
-    padding-left: 1rem;
     padding-bottom: .5rem;
 }
 
