--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,10 +28,6 @@ code {
     padding-left: 2.5rem;
 }
 
-.pl-2-7rem {
-    padding-left: 2.7rem;
-}
-
 .pl-3rem {
     padding-left: 3rem;
 }
